Project

General

Profile

Actions

Bug #40835

closed

OSDCap.PoolClassRNS test aborts

Added by Brad Hubbard over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
Tests
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
mimic,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

$ bin/unittest_osd_osdcap --gtest_filter='OSDCap.PoolClassRNS'                
Running main() from gmock_main.cc
Note: Google Test filter = OSDCap.PoolClassRNS
[==========] Running 1 test from 1 test suite.
[----------] Global test environment set-up.
[----------] 1 test from OSDCap
[ RUN      ] OSDCap.PoolClassRNS
/builddir/build/BUILD/gcc-9.1.1-20190503/obj-x86_64-redhat-linux/x86_64-redhat-linux/libstdc++-v3/include/bits/basic_string.h:1048: std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::const_reference std::__cxx11::basic_string<_CharT, _
Traits, _Alloc>::operator[](std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type) const [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>; std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::
const_reference = const char&; std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type = long unsigned int]: Assertion '__pos <= size()' failed.

Related issues 2 (0 open2 closed)

Copied to RADOS - Backport #41490: mimic: OSDCap.PoolClassRNS test abortsResolvedNathan CutlerActions
Copied to RADOS - Backport #41491: nautilus: OSDCap.PoolClassRNS test abortsResolvedNathan CutlerActions
Actions #1

Updated by Brad Hubbard over 4 years ago

(gdb) 
#4  0x0000555555a1d29a in OSDCapPoolNamespace::is_match (this=0x5555564ea800, pn="bar", ns="") at /home/brad/working/src/ceph/src/osd/OSDCap.cc:118
118         if ((*nspace)[nspace->length() - 1] == '*' &&
(gdb) up
#5  0x0000555555a1d6f5 in OSDCapMatch::is_match (this=0x5555564ea800, pn="bar", ns="", app_map=std::map with 0 elements, object="foo") at /home/brad/working/src/ceph/src/osd/OSDCap.cc:177
177       if (!pool_namespace.is_match(pn, ns)) {
(gdb) up
#6  0x0000555555a1dd96 in OSDCapGrant::is_capable (this=0x5555564ea800, pool_name="bar", ns="", application_metadata=std::map with 0 elements, object="foo", op_may_read=false, op_may_write=false, 
    classes=std::vector of length 1, capacity 1 = {...}, addr=..., class_allowed=0x7fffffffcbd0) at /home/brad/working/src/ceph/src/osd/OSDCap.cc:276
276         if (match.is_match(pool_name, ns, application_metadata, object)) {
(gdb) up
#7  0x0000555555a1f0e5 in OSDCap::is_capable (this=0x7fffffffcfe0, pool_name="bar", ns="", application_metadata=std::map with 0 elements, object="foo", op_may_read=false, op_may_write=false, 
    classes=std::vector of length 1, capacity 1 = {...}, addr=...) at /home/brad/working/src/ceph/src/osd/OSDCap.cc:385
385         if (grant.is_capable(pool_name, ns, application_metadata,
(gdb) up
#8  0x0000555555911e73 in OSDCap_PoolClassRNS_Test::TestBody (this=0x5555564960e0) at /home/brad/working/src/ceph/src/test/osd/osdcap.cc:632
632       ASSERT_TRUE(cap.is_capable("bar", "", {}, "foo", false, false, {{"cls", "", true, false, true}}, addr));
Actions #2

Updated by Brad Hubbard over 4 years ago

  • Status changed from New to Can't reproduce
Actions #3

Updated by Brad Hubbard over 4 years ago

  • Status changed from Can't reproduce to New
Actions #4

Updated by Brad Hubbard over 4 years ago

  • Category set to Tests
Actions #5

Updated by Brad Hubbard over 4 years ago

  • Target version set to v15.0.0
  • Backport set to nautilus
Actions #6

Updated by Brad Hubbard over 4 years ago

  • Status changed from New to 12
Actions #7

Updated by Kefu Chai over 4 years ago

  • Status changed from 12 to In Progress
  • Pull request ID set to 29146
Actions #8

Updated by Kefu Chai over 4 years ago

  • Status changed from In Progress to Pending Backport
  • Backport changed from nautilus to mimic,nautilus
Actions #9

Updated by Nathan Cutler over 4 years ago

Actions #10

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41491: nautilus: OSDCap.PoolClassRNS test aborts added
Actions #11

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF