osd/OSDCap: Check for empty namespace

Fixes: http://tracker.ceph.com/issues/40835

Signed-off-by: Brad Hubbard <bhubbard@redhat.com>
(cherry picked from commit 002ced8a5f25cfbecf5f34e147a0c863ecbf77c7)